test/files/run/typetags_without_scala_reflect_typetag_lookup.check
newSource1:9: error: could not find implicit value for evidence parameter of type reflect.runtime.package.universe.TypeTag[Int]
      Library.foo[Int]
                 ^
